--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -23,7 +24,7 @@
     "iconsax-react": "^0.0.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.394.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
